crates/rome_service/src/snapshots/cant_read_file.snap
---
source: crates/rome_service/src/diagnostics.rs
expression: content
---
example.js internalError/fs ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Rome couldn't read the following file, maybe for permissions reasons or it doesn't exists: example.js
  


