crates/rome_service/src/snapshots/dirty_workspace.snap
---
source: crates/rome_service/src/diagnostics.rs
expression: content
---
internalError/fs  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Uncommitted changes in repository
  


