crates/rome_service/src/snapshots/file_too_large.snap
---
source: crates/rome_service/src/diagnostics.rs
expression: content
---
example.js internalError/fs ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Size of example.js is 500 B which exceeds configured maximum of 100 B for this project. The file size limit exists to prevent us inadvertently slowing down and loading large files that we shouldn't.
  


