crates/rome_service/src/snapshots/transport_channel_closed.snap
---
source: crates/rome_service/src/diagnostics.rs
expression: content
---
internalError/io  INTERNAL  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × a request to the remote workspace failed because the connection was interrupted
  
  ! This diagnostic was derived from an internal Rome error. Potential bug, please report it if necessary.
  


