crates/rome_service/src/snapshots/transport_timeout.snap
---
source: crates/rome_service/src/diagnostics.rs
expression: content
---
internalError/io  INTERNAL  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × the request to the remote workspace timed out
  
  ! This diagnostic was derived from an internal Rome error. Potential bug, please report it if necessary.
  


